--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
   "engines": {
     "node": "6.10"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1"
+  },
   "stylelint": {
     "extends": "stylelint-config-htmlacademy"
   }
